dropshot/tests/fail/bad_trait_only21.stderr
error[E0308]: mismatched types
  --> tests/fail/bad_trait_only21.rs:14:1
   |
14 | / #[dropshot::api_description {
15 | |     tag_config = {
16 | |         policy = 2 + 2,
17 | |         tags = {},
18 | |     }
19 | | }]
   | |__^ expected `EndpointTagPolicy`, found integer
   |
   = note: this error originates in the attribute macro `dropshot::api_description` (in Nightly builds, run with -Z macro-backtrace for more info)
